<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_action_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_size_50dp"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Star Wars" />

    <ImageView
        android:id="@+id/img_people"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/ui_size_2dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_action_header"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tit_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/people_tit_toolbar"
        android:textSize="@dimen/ui_txt_size_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_people"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_planets"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/ui_size_8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_people" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/img_planets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_people" />

    <TextView
        android:id="@+id/tit_planets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ui_size_16dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/planets_tit_toolbar"
        android:textSize="@dimen/ui_txt_size_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_planets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/img_films"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_planets" />

    <ImageView
        android:id="@+id/img_films"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/ui_size_8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_planets" />

    <TextView
        android:id="@+id/tit_films"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/films_tit_toolbar"
        android:layout_marginBottom="@dimen/ui_size_16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/img_films"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/ui_txt_size_16sp"
        android:textStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>